add submit final answer tool and correction processor consolidation